     ``urllib.urlencode``) which can handle Unicode keys and values in
     parameters to the ``query`` argument.

  Deprecations

   - The ``model_url`` function has been moved from
     ``repoze.bfg.traversal`` into ``repoze.bfg.url``.  It can still
     be imported from ``repoze.bfg.traversal`` but an import from
     ``repoze.bfg.traversal`` will emit a DeprecationWarning.

  Features

   - The ``repoze.bfg.url.model_url`` API (nee'
     ``repoze.bfg.traversal.model_url``) now accepts and honors a
     keyword argument named ``query``.  The value of this argument
     will be used to compose a query string, which will be attached to
     the generated URL before it is returned.  See the API docs (in
     the docs directory or `on the web
     <http://static.repoze.org/bfgdocs>`_) for more information.

 0.6 (12/26/2008)

  Backwards Incompatibilities

  - Rather than prepare the "stock" implementations of the ZCML
    directives from the ``zope.configuration`` package for use under
    :mod:`repoze.bfg`, :mod:`repoze.bfg` now makes available the
    implementations of directives from the ``repoze.zcml`` package
    (see http://static.repoze.org/zcmldocs).  As a result, the
    :mod:`repoze.bfg` package now depends on the ``repoze.zcml``
    package, and no longer depends directly on the ``zope.component``,
    ``zope.configuration``, ``zope.interface``, or ``zope.proxy``
    packages.

    The primary reason for this change is to enable us to eventually
    reduce the number of inappropriate :mod:`repoze.bfg` Zope package
    dependencies, as well as to shed features of dependent package
    directives that don't make sense for :mod:`repoze.bfg`.

    Note that currently the set of requirements necessary to use bfg
    has not changed.  This is due to inappropriate Zope package
    requirements in ``chameleon.zpt``, which will hopefully be
    remedied soon. NOTE: in lemonade index a 1.0b8-repozezcml0
    package exists which does away with these requirements.